--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ notifications:
   email: false
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("MeshIO")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'cd(Pkg.dir("FunctionalCollections")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("MeshIO")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'cd(Pkg.dir("FunctionalCollections")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
