--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
+# Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
-    - linux
-    - osx
+  - linux
+  - osx
 julia:
-    - 0.5
-    - nightly
+  - 0.7
+  - nightly
+# matrix:
+#   allow_failures:
+#     - julia: nightly
+
 notifications:
-    email: false
+  email: false
+after_success:
+  # push coverage results to Coveralls
+  - julia -e 'cd(Pkg.dir("FunctionalCollections")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  # push coverage results to Codecov
+  - julia -e 'cd(Pkg.dir("FunctionalCollections")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
