--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,5 @@ matrix:
 notifications:
   email: false
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("FunctionalCollections")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-  # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("FunctionalCollections")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg; import FunctionalCollections; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - julia -e 'using Pkg; import FunctionalCollections; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
